--- a/prog/style.css
+++ b/prog/style.css
@@ -12,10 +12,11 @@
   }
 
   :root {
-    --bg-color:#172643;
-    --second-bg-color:#0e182a;
-    --text-color:#fbfbfb;
-    --main-color:rgb(209, 89, 25);
+    --bg-color:#ffffff;
+    --second-bg-color:#dfdfdf;
+    --text-color:#000000;
+    --main-color:rgb(232, 26, 26);
+    --text-color2:white;
   }
 
   html {
@@ -229,6 +230,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    color: var(--text-color2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -259,7 +261,7 @@
     align-items: center;
     width: 5rem;
     height: 5rem;
-    background: var(--text-color);
+    background: var(--text-color2);
     border-radius: 50%;
   }
 
